syntax = "proto3";
package modelhawk.v1;

option go_package = "github.com/dshearer/modelhawk/v1";

import "application.proto";
import "service_status_response.proto";

message ToolArgInfo {
  string name = 1;
  string type = 2;
  string desc = 3;
}

message GiveToolInfoRequest {
  Application app = 1;
  string name = 2;
  string desc = 3;
  repeated ToolArgInfo args = 4;
}

message GiveToolInfoResponse {
  int32 result = 1;
  string msg = 2;
}

service InfoService {
  // Tell ModelHawk about a tool that is available in a particular context.
  rpc GiveToolInfo(GiveToolInfoRequest) returns (ServiceStatusResponse);
}
