syntax = "proto3";
package modelhawk.v1;

option go_package = "github.com/dshearer/modelhawk/v1";

import "google/protobuf/timestamp.proto";
import "application.proto";
import "service_status_response.proto";
import "tool_arg.proto";

message CalledToolRequest {
  optional Application app = 1;
  optional string name = 2;
  repeated ToolArg args = 3;
}

message GotToolResponseRequest {
  optional Application app = 1;
  optional string name = 2;
  optional string resp = 3;
  optional google.protobuf.Timestamp time = 4;
}

service NotifyService {
  rpc CalledTool(CalledToolRequest) returns (ServiceStatusResponse);
  rpc GotToolResponse(GotToolResponseRequest) returns (ServiceStatusResponse);
}
