syntax = "proto3";
package modelhawk.v1;

option go_package = "github.com/dshearer/modelhawk/v1";

import "application.proto";
import "tool_arg.proto";

message WantsToCallToolRequest {
  optional Application app = 1;
  optional string name = 2;
  repeated ToolArg args = 3;
}

message WantsToCallToolResponse {
  enum Result {
    RESULT_INVALID = 0;
    RESULT_PERMITTED = 1;
    RESULT_DENIED = 2;
  }
  optional Result result = 1;
  optional string details = 2;
}

service PermissionService {
  rpc WantsToCallTool(WantsToCallToolRequest) returns (WantsToCallToolResponse);
}