syntax = "proto3";
package modelhawk.v1;

option go_package = "github.com/dshearer/modelhawk/v1";

message ServiceStatusResponse {
  enum Result {
    RESULT_OK = 0;
    RESULT_ERROR = 1;
  }
  optional Result result = 1;
  optional string msg = 2;
}